# honor-upgrade

./: .gitignore
dependency/c_cpp/: a.out  test.sh  test_pj.sh
dependency/c_cpp/dependencies/filter/: dune-project
dependency/c_cpp/dependencies/filter/lib/: dune
dependency/c_cpp/dependencies/filter/test/: dune
dependency/c_cpp/dependency-test/: access_field.cpp  adhoc_poly.cpp  fun_ptr.cpp  if_stmt.cpp  lambda.cpp  method.cpp  param_poly.cpp  points_to.cpp  recursive.cpp  subtyping_poly.cpp  subtyping_poly.java  trival.cpp  while_stmt.cpp
dependency/c_cpp/infer/src/: dune.in
dependency/c_cpp/infer/src/IR/: Procdesc.ml  (+7 more)
dependency/c_cpp/infer/src/Nasus/: ATDUtil.ml  dependencyAnalysis.ml  dependencyAnalysis.mli  dependencyAnalysisDomain.ml  dependencyAnalysisDomain.mli  dune  inheritenceAnalysis.ml  inheritenceAnalysis.mli  methodDispatch.ml  methodDispatch.mli  pointsTo.ml  pointsTo.mli  referingAnalysis.ml  referingAnalysis.mli  subtyping.ml  subtyping.mli
dependency/cross-lingual/: README.md  ast_parser.py  common.py  cpp2java.py  dependency.py  java2cpp.py  main.py  project_cpp.py  project_java.py  radar.py  requirements.txt  util.py
diff/: README.md
diff/CLDIFF_honor/: .gitignore  commits-accuracy.json  pom.xml
diff/CLDIFF_honor/src/main/: Boot.java  CLDIFFCmd.java  CLDIFFServerOffline.java  CLDIFFServerOnline.java  test.java
diff/CLDIFF_honor/test/: CLDiffAllCommit.java  CLDiffFilePairTest.java  RQ0_Meta.java  RQ1_Accuracy.java  RQ1_Accuracy_cal.java  RQ2_Consiceness.java  RQ3_Performance.java  RQ4_Humanstudy.java  TestCmd.java  TestJDT.java
(+304 files in other folders)
