(library
 (name Nasus)
 (public_name infer.Nasus)
 (flags
  (:standard
   -open
   Core
   -open
   OpenSource
   -open
   IR
   -open
   IStdlib
   -open
   IStd
   -open
   ATDGenerated
   -open
   IBase
   -open
   Absint
   -open
   Biabduction
   -open
   BO
   -open
   Pulselib))
 (libraries
  base64
  core
  ocamlgraph
  IStdlib
  ATDGenerated
  IBase
  IR
  Absint
  Biabduction
  BO
  Pulselib)
 (preprocess
  (pps
   ppx_compare
   ppx_hash
   ppx_fields_conv
   ppx_sexp_conv
   ppx_variants_conv
   ppx_yojson_conv)))
